@@ -93,17 +93,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                  <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>3.0.0-M4</version>
                 <configuration>
+                  <argLine>--illegal-access=permit</argLine>
                     <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <includes>
                         <include>**/*Spec.java</include>
@@ -119,6 +119,14 @@
                 <configuration>
                     <mainClass>org.sunbird.middleware.Application</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>versions-maven-plugin</artifactId>
+              <version>2.5</version>
+              <configuration>
+                <generateBackupPoms>false</generateBackupPoms>
+              </configuration>
             </plugin>
         </plugins>
         <finalName>actor-service</finalName>
